@@ -1,5 +1,7 @@
 *2.1.1 (next release)*
 
+* Partial updates don't update lock_version if nothing changed.  #426 [Daniel Morrison]
+
 * Fix column collision with named_scope and :joins.  #46 [Duncan Beevers, Mark Catley]
 
 * db:migrate:down and :up update schema_migrations.  #369 [Michael Raidel, RaceCondition]
